--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700;900&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -80,6 +78,188 @@
     </header>
     <!-- Header end -->
     <main class="container mx-auto py-10">
+        <!-- banner section start -->
+        <div class="carousel w-full">
+            <!-- first carousel -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <div>
+                    <div class="relative ">
+                        <img src="./images/banner1.png" class="w-full opacity-100" />
+                        <div
+                            class="text-white text-center absolute top-4 md:top-10 w-full mx-auto space-y-1 md:space-y-4 -mt-14 lg:mt-4  py-16 ">
+                            <h1 class="text-2xl md:text-6xl font-lato font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p class="md:py-3 ">We supply highly quality organic products</p>
+                            <button class="btn bg-[#F85559] border-0 text-white block mx-auto hover:bg-[#f56403]">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+
+
+                    <div class=" lg:-mt-10  md:-mt-4  ">
+                        <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
+
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit8.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit1.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit2.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit4.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit5.png" alt="Shoes" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- Second carousel -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <div>
+                    <div class="relative ">
+                        <img src="./images/banner2.png" class="w-full opacity-100" />
+                        <div
+                            class="text-white text-center absolute top-4 md:top-10 w-full mx-auto space-y-1 md:space-y-4 -mt-14 lg:mt-4  py-16 ">
+                            <h1 class="text-2xl md:text-6xl font-lato font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p class="md:py-3 ">We supply highly quality organic products</p>
+                            <button class="btn bg-[#F85559] border-0 text-white block mx-auto hover:bg-[#f56403]">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+
+
+                    <div class=" lg:-mt-10  md:-mt-4  ">
+                        <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
+
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit8.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit1.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit2.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit4.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit5.png" alt="Shoes" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- Third carousel -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <div>
+                    <div class="relative ">
+                        <img src="./images/banner3.png" class="w-full opacity-100" />
+                        <div
+                            class="text-white text-center absolute top-4 md:top-10 w-full mx-auto space-y-1 md:space-y-4 -mt-14 lg:mt-4  py-16 ">
+                            <h1 class="text-2xl md:text-6xl font-lato font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p class="md:py-3 ">We supply highly quality organic products</p>
+                            <button class="btn bg-[#F85559] border-0 text-white block mx-auto hover:bg-[#f56403]">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+
+
+                    <div class=" lg:-mt-10  md:-mt-4  ">
+                        <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
+
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit8.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit1.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit2.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit4.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit5.png" alt="Shoes" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- Fourth carousel -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <div>
+                    <div class="relative ">
+                        <img src="./images/banner4.png" class="w-full opacity-100" />
+                        <div
+                            class="text-white text-center absolute top-4 md:top-10 w-full mx-auto space-y-1 md:space-y-4 -mt-14 lg:mt-4  py-16 ">
+                            <h1 class="text-2xl md:text-6xl font-lato font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p class="md:py-3 ">We supply highly quality organic products</p>
+                            <button class="btn bg-[#F85559] border-0 text-white block mx-auto hover:bg-[#f56403]">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+
+
+                    <div class=" lg:-mt-10  md:-mt-4  ">
+                        <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
+
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit8.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit1.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit2.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit4.png" alt="Shoes" />
+                            </div>
+                            <div class="card rounded-none bg-base-100 ">
+                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit5.png" alt="Shoes" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
 
     </main>
