deal of the day countdown

--- a/index.html
+++ b/index.html
@@ -260,7 +260,46 @@
 
                 </div>
             </div>
+        </div>
 
+        <!-- Deal of the day -->
+        <div class="container mx-auto py-10 ">
+            <div class=" md:flex lg:flex md:gap-32 lg:gap-48 space-y-4 ">
+                <div class="space-y-3">
+                    <h2 class="text-3xl text-center md:text-left md:text-4xl font-bold">Deal of the day</h2>
+                    <p class="text-[16px] text-center md:text-left px-6 md:p-0">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+                <div >
+                    <div class="grid grid-flow-col gap-10 justify-center md:gap-12 text-center auto-cols-max">
+                        <div class="flex flex-col">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:15;"></span>
+                          </span>
+                          days
+                        </div> 
+                        <div class="flex flex-col">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:10;"></span>
+                          </span>
+                          hours
+                        </div> 
+                        <div class="flex flex-col">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:24;"></span>
+                          </span>
+                          min
+                        </div> 
+                        <div class="flex flex-col">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:50;"></span>
+                          </span>
+                          sec
+                        </div>
+                      </div>
+                </div>
+            </div>
+            
+        </div>
 
     </main>
 
