meet client and responsive

--- a/index.html
+++ b/index.html
@@ -594,6 +594,73 @@
             <button class="btn bg-[#F85559] text-white block mx-auto mt-8">Show all</button>
         </div>
 
+        <!-- Meet the team section -->
+        <div class="container mx-auto px-5 md:px-0">
+            <div class="meet-section w-full h-auto   md:h-auto lg:h-[690px] text-white text-center py-20">
+                <h1 class="text-5xl font-bold" >Meet the team section</h1>
+                <p class="py-5 w-2/3 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <div class="grid md:grid-cols-2 lg:grid-cols-4 md:gap-2 lg:gap-3">
+                    <div class="card   shadow-xl">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center space-y-3">
+                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <p class="text-[18px]">Fruits Expert</p>
+                          <div class="card-actions flex gap-4 text-2xl ">
+                            <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-red-500 px-1 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-red-500 px-1.5 py-1 rounded-full"></i>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card   shadow-xl">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center space-y-3">
+                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <p class="text-[18px]">Fruits Expert</p>
+                          <div class="card-actions flex gap-4 text-2xl ">
+                            <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-red-500 px-1 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-red-500 px-1.5 py-1 rounded-full"></i>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card  shadow-xl">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center space-y-3">
+                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <p class="text-[18px]">Fruits Expert</p>
+                          <div class="card-actions flex gap-4 text-2xl ">
+                            <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-red-500 px-1 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-red-500 px-1.5 py-1 rounded-full"></i>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card   shadow-xl">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center space-y-3">
+                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <p class="text-[18px]">Fruits Expert</p>
+                          <div class="card-actions flex gap-4 text-2xl ">
+                            <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-red-500 px-1 py-1 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-red-500 px-1.5 py-1 rounded-full"></i>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+           
+        </div>
+
     </main>
 
     <footer>
