--- a/index.html
+++ b/index.html
@@ -662,9 +662,28 @@
         </div>
 
     </main>
-
-    <footer>
-
+<!-- Footer section -->
+    <footer class="bg-black py-32 w-full mx-auto text-white space-y-8">
+        <div class=" font-bold  flex items-center gap-x-3 justify-center">
+            <img class="w-10 md:w-12" src="./images/logo.png" alt="">
+            <h2 class="text-2xl md:text-[32px] lg:text-[40px] md:text-white">Fruits Brust</h2>
+        </div>
+        <div class="flex flex-wrap gap-x-10 gap-y-5 px-5 md:px-0 items-center  justify-center py-5">
+            <a href="">Home</a>
+            <a href="">About us</a>
+            <a href="">All Fruits</a>
+            <a href="">Shp</a>
+            <a href="">Support</a>
+            <a href="">My account</a>
+        </div>
+        <div class="flex items-center gap-x-6 justify-center text-2xl">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-apple"></i>
+        </div>
     </footer>
 
 
