--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Burst!! </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/fruit4.png" type="image/x-icon">
 
     <script>
         tailwind.config = {
