--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
             </div>
             <!-- deal of the day card -->
-            <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 py-10">
+            <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 py-10 ">
                 <!-- First card start  -->
                 <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
@@ -532,10 +532,10 @@
                       </div>
                     <div class="card   shadow-xl">
                         <figure class="px-10 pt-10">
-                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                          <img src="./images/member2.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center space-y-3">
-                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <h2 class="card-title text-2xl">Safia Chowdhury</h2>
                           <p class="text-[18px]">Fruits Expert</p>
                           <div class="card-actions flex gap-4 text-2xl ">
                             <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
@@ -546,10 +546,10 @@
                       </div>
                     <div class="card  shadow-xl">
                         <figure class="px-10 pt-10">
-                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                          <img src="./images/member3.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center space-y-3">
-                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <h2 class="card-title text-2xl">Rokib Hossain</h2>
                           <p class="text-[18px]">Fruits Expert</p>
                           <div class="card-actions flex gap-4 text-2xl ">
                             <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
@@ -560,10 +560,10 @@
                       </div>
                     <div class="card   shadow-xl">
                         <figure class="px-10 pt-10">
-                          <img src="./images/member1.png" alt="" class="rounded-xl" />
+                          <img src="./images/member4.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center space-y-3">
-                          <h2 class="card-title text-2xl">Awlad Hossain</h2>
+                          <h2 class="card-title text-2xl">Chaity</h2>
                           <p class="text-[18px]">Fruits Expert</p>
                           <div class="card-actions flex gap-4 text-2xl ">
                             <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
