--- a/index.html
+++ b/index.html
@@ -574,8 +574,125 @@
                       </div>
                 </div>
             </div>
-           
         </div>
+        <!-- why choose us -->
+    <section class="container mx-auto text-center py-10">
+        <h2 class="text-3xl md:text-5xl font-bold ">Why Choose Us</h2>
+        <p class="w-3/5 mx-auto py-3">Contrary to popular belief, is not simply random text. It has roots in a piece of
+            classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        <div class="grid md:grid-cols-2-center lg:grid-cols-3 md;gap-5 gap-y-6 gap-x-6 px-5 md:px-0 mt-10">
+            <!-- left column -->
+            <div class="grid  md:grid-col-3 gap-4">
+                <!-- first description -->
+                <div class="flex justify-start items-start">
+
+                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
+                        <div>
+                            <i
+                                class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                        </div>
+                        <div class="card-body p-0 gap-3">
+                            <h2 class="card-title text-2xl font-bold ">Dedicated Team</h2>
+                            <hr class=" w-3/5 border border-1 border-black">
+                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- second description -->
+                <div class="flex justify-start items-start">
+
+                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
+                        <div>
+                            <i
+                                class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                        </div>
+                        <div class="card-body p-0 gap-3">
+                            <h2 class="card-title text-2xl font-bold ">Fresh is Best</h2>
+                            <hr class=" w-3/5 border border-1 border-black">
+                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- third description -->
+                <div class="flex justify-start items-start">
+
+                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
+                        <div>
+                            
+                                <i class="fa-solid fa-stamp text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                        </div>
+                        <div class="card-body p-0 gap-3">
+                            <h2 class="card-title text-2xl font-bold ">Gift Certificates</h2>
+                            <hr class=" w-3/5 border border-1 border-black">
+                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- left column end -->
+            <!-- MIddle column start-->
+            <div>
+                <img src="./images/whychoose1.png" alt="">
+            </div>
+            <!-- middle column ends -->
+            <!-- Right column start -->
+            <div class="grid  md:grid-col-3 gap-4">
+                <!-- first description -->
+                <div class="flex justify-start items-start ">
+
+                    <div class="card card-side bg-base-100 flex items-start gap-5  ">
+                        <div>
+                                <i class="fa-solid fa-truck-field-un text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                        </div>
+                        <div class="card-body p-0 gap-3">
+                            <h2 class="card-title text-2xl font-bold ">Sustainable Practice</h2>
+                            <hr class=" w-3/5 border border-1 border-black">
+                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- second description -->
+                <div class="flex justify-start items-start">
+
+                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
+                        <div>
+                                <i class="fa-regular fa-thumbs-up text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                        </div>
+                        <div class="card-body p-0 gap-3">
+                            <h2 class="card-title text-2xl font-bold ">Sustainable Practice</h2>
+                            <hr class=" w-3/5 border border-1 border-black">
+                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- third description -->
+                <div class="flex justify-start items-start">
+
+                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
+                        <div>
+                            <i
+                                class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                        </div>
+                        <div class="card-body p-0 gap-3">
+                            <h2 class="card-title text-2xl font-bold ">The Benefits Only</h2>
+                            <hr class=" w-3/5 border border-1 border-black">
+                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- right column ends -->
+
+
+        </div>
+
+    </section>
 
     </main>
 <!-- Footer section -->
