--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                     </div>
 
 
-                    <div class=" lg:-mt-10  md:-mt-4  ">
-                        <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
+                    <div class=" lg:-mt-10  md:-mt-4   ">
+                        <div class="grid md:grid-cols-5 justify-center px-24 rounded-2xl ">
 
                             <div class="card rounded-none bg-base-100 ">
                                 <img class="p-6 w-[144px] h-[112px]" src="./images/fruit8.png" alt="" />
@@ -264,7 +264,7 @@
         </div>
 
         <!-- Deal of the day -->
-        <div class="container mx-auto py-10 ">
+        <div class="container mx-auto py-20 ">
             <div class=" md:flex lg:flex md:gap-32 lg:gap-48 space-y-4 ">
                 <div class="space-y-3">
                     <h2 class="text-3xl text-center md:text-left md:text-4xl font-bold">Deal of the day</h2>
@@ -306,11 +306,11 @@
                 <!-- First card start  -->
                 <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
-                        <img src="./images/fruit8.png" alt="" class="rounded-xl" />
+                        <img src="./images/fruit1.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
-                        <h2 class="card-title text-[32px]">11.90$ - 17.80$</h2>
-                        <p class="text-[16px]">Red Dragon</p>
+                        <h2 class="card-title text-[32px]">13.60$ - 18.80$</h2>
+                        <p class="text-[16px]">Grapes</p>
                         <div class="rating rating-md">
                             <input type="radio" name="rating-7" class="mask mask-star-2 bg-red-400" />
                             <input type="radio" name="rating-7" class="mask mask-star-2 bg-red-400" checked />
@@ -321,15 +321,15 @@
                         <div class="card-actions">
                             <!-- modal -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn" onclick="my_modal_1.showModal()">Details</button>
+                            <button class="text-red-500" onclick="my_modal_1.showModal()">Details</button>
                             <dialog id="my_modal_1" class="modal p-0 m-0">
-                                <form method="dialog" class="modal-box">
+                                <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
-                                        <figure class="md:px-6 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit8.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                        <figure class="md:px-3 md:pt-8 py-0 my-0">
+                                          <img src="/images/fruit1.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
-                                          <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Red Dragon</h2>
+                                          <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Grapes</h2>
                                           <p class="text-[16px]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                           <div class="card-actions p-0">
                                             <div class="rating rating-md">
@@ -358,11 +358,11 @@
         
                 <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
-                        <img src="./images/fruit6.png" alt="" class="rounded-xl" />
+                        <img src="./images/fruit3.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
-                        <h2 class="card-title text-[32px]">11.90$ - 17.80$</h2>
-                        <p class="text-[16px]">Apple</p>
+                        <h2 class="card-title text-[32px]">13.60$ - 18.80$</h2>
+                        <p class="text-[16px]">MIxed fruites</p>
                         <div class="rating rating-md">
                             <input type="radio" name="rating-7" class="mask mask-star-2 bg-red-400" />
                             <input type="radio" name="rating-7" class="mask mask-star-2 bg-red-400" checked />
@@ -373,15 +373,15 @@
                         <div class="card-actions">
                             <!-- modal -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn" onclick="my_modal_2.showModal()">Details</button>
+                            <button class="text-red-500" onclick="my_modal_2.showModal()">Details</button>
                             <dialog id="my_modal_2" class="modal p-0 m-0">
-                                <form method="dialog" class="modal-box">
+                                <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
-                                        <figure class="md:px-6 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit6.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                        <figure class="md:px-3 md:pt-8 py-0 my-0">
+                                          <img src="/images/fruit3.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
-                                          <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Apple</h2>
+                                          <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Mixed Fruits</h2>
                                           <p class="text-[16px]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                           <div class="card-actions p-0">
                                             <div class="rating rating-md">
@@ -412,7 +412,7 @@
                         <img src="./images/fruit4.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
-                        <h2 class="card-title text-[32px]">13.90$ - 19.80$</h2>
+                        <h2 class="card-title text-[32px]">13.60$ - 18.80$</h2>
                         <p class="text-[16px]">Strawberry</p>
                         <div class="rating rating-md">
                             <input type="radio" name="rating-7" class="mask mask-star-2 bg-red-400" />
@@ -424,15 +424,15 @@
                         <div class="card-actions">
                             <!-- modal -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn" onclick="my_modal_3.showModal()">Details</button>
+                            <button class="text-red-500" onclick="my_modal_3.showModal()">Details</button>
                             <dialog id="my_modal_3" class="modal p-0 m-0">
-                                <form method="dialog" class="modal-box">
+                                <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
                                         <figure class="md:px-6 md:pt-8 py-0 my-0">
                                           <img src="/images/fruit4.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
-                                          <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Strawberry</h2>
+                                          <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Atrawberry</h2>
                                           <p class="text-[16px]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                           <div class="card-actions p-0">
                                             <div class="rating rating-md">
@@ -456,13 +456,14 @@
                     </div>
                 </div>
                 <!-- Third card Ends -->
+
                 <!-- Fourth card start -->
-                <div class="card  bg-base-100 shadow-xl">
+               <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
                         <img src="./images/fruit2.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
-                        <h2 class="card-title text-[32px]">11.90$ - 15.80$</h2>
+                        <h2 class="card-title text-[32px]">11.50$ - 15.80$</h2>
                         <p class="text-[16px]">Orange</p>
                         <div class="rating rating-md">
                             <input type="radio" name="rating-7" class="mask mask-star-2 bg-red-400" />
@@ -474,12 +475,12 @@
                         <div class="card-actions">
                             <!-- modal -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn" onclick="my_modal_4.showModal()">Details</button>
+                            <button class="text-red-500" onclick="my_modal_4.showModal()">Details</button>
                             <dialog id="my_modal_4" class="modal p-0 m-0">
-                                <form method="dialog" class="modal-box">
+                                <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
-                                        <figure class="md:px-6 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit2.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                        <figure class="md:px-2 md:pt-8 py-0 my-0">
+                                          <img src="/images/fruit6.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
                                           <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Orange</h2>
