details card image solve

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                 <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
                                         <figure class="md:px-3 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit1.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                          <img src="./images/fruit1.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
                                           <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Grapes</h2>
@@ -378,7 +378,7 @@
                                 <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
                                         <figure class="md:px-3 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit3.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                          <img src="./images/fruit3.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
                                           <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Mixed Fruits</h2>
@@ -429,7 +429,7 @@
                                 <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
                                         <figure class="md:px-6 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit4.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                          <img src="./images/fruit4.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
                                           <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Atrawberry</h2>
@@ -480,7 +480,7 @@
                                 <form method="dialog" class="modal-box w-96">
                                     <div class="card  ">
                                         <figure class="md:px-2 md:pt-8 py-0 my-0">
-                                          <img src="/images/fruit6.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
+                                          <img src="./images/fruit6.png" alt="" class="rounded-xl md:w-[180px] md:h-[180px]" />
                                         </figure>
                                         <div class="card-body items-center text-center md:space-y-3">
                                           <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Orange</h2>
