why choose done

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                     <div class=" lg:-mt-10  md:-mt-4   ">
                         <div class="grid md:grid-cols-5 justify-center px-24 rounded-2xl ">
 
-                            <div class="card rounded-none bg-base-100 ">
-                                <img class="p-6 w-[144px] h-[112px]" src="./images/fruit8.png" alt="" />
+                            <div class="card rounded-none bg-base-100  ">
+                                <img class="p-6 w-[144px] h-[112px] " src="./images/fruit8.png" alt="" />
                             </div>
                             <div class="card rounded-none bg-base-100 ">
                                 <img class="p-6 w-[144px] h-[112px]" src="./images/fruit1.png" alt="" />
@@ -640,54 +640,44 @@
             </div>
             <!-- middle column ends -->
             <!-- Right column start -->
-            <div class="grid  md:grid-col-3 gap-4">
+            <div class="grid  md:grid-col-3 gap-3">
                 <!-- first description -->
-                <div class="flex justify-start items-start ">
-
-                    <div class="card card-side bg-base-100 flex items-start gap-5  ">
-                        <div>
-                                <i class="fa-solid fa-truck-field-un text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
-                        </div>
-                        <div class="card-body p-0 gap-3">
-                            <h2 class="card-title text-2xl font-bold ">Sustainable Practice</h2>
-                            <hr class=" w-3/5 border border-1 border-black">
-                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-
-                        </div>
+                <div class="flex justify-end gap-5">
+                    <div class="text-right">
+                        <h2 class="text-2xl font-bold">Dedicated Team</h2>
+                        <hr class=" w-2/5 border border-1 mt-2 ml-[190px] border-black mx">
+                        <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+                    <div >
+                        <img class="w-[120px] bg-gray-200 rounded-full p-2" src="./images/fruit6.png" alt="">
                     </div>
                 </div>
                 <!-- second description -->
-                <div class="flex justify-start items-start">
-
-                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
-                        <div>
-                                <i class="fa-regular fa-thumbs-up text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
-                        </div>
-                        <div class="card-body p-0 gap-3">
-                            <h2 class="card-title text-2xl font-bold ">Sustainable Practice</h2>
-                            <hr class=" w-3/5 border border-1 border-black">
-                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-
-                        </div>
+                <div class="flex justify-end gap-5">
+                    <div class="text-right">
+                        <h2 class="text-2xl font-bold">Gift Certificates</h2>
+                        <hr class=" w-2/5 border border-1 mt-2 ml-[190px] border-black mx">
+                        <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+                    <div >
+                        <img class="w-[120px] bg-gray-200 rounded-full p-2" src="./images/fruit8.png" alt="">
                     </div>
                 </div>
-                <!-- third description -->
-                <div class="flex justify-start items-start">
-
-                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
-                        <div>
-                            <i
-                                class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
-                        </div>
-                        <div class="card-body p-0 gap-3">
-                            <h2 class="card-title text-2xl font-bold ">The Benefits Only</h2>
-                            <hr class=" w-3/5 border border-1 border-black">
-                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-
-                        </div>
+              <!-- third description -->
+                <div class="flex   md:justify-end gap-5">
+                    <div class="text-right ">
+                        <h2 class="text-2xl font-bold ">Fresh is Best</h2>
+                        <hr class=" w-2/5  border border-1 mt-2  ml-[190px] border-black mx">
+                        <p class="py-2 ">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+                    <div >
+                        <img class="w-[120px] mx-auto bg-gray-200 rounded-full p-2" src="./images/fruit7.png" alt="">
                     </div>
                 </div>
-            </div>
+            <!-- right column ends -->
+
+
+        </div>
             <!-- right column ends -->
 
 
