banner section mobile responsive

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
                         </div>
                     </div>
                     <div
-                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        class="absolute flex justify-between  transform -translate-y-1/2 left-5 right-5 md:top-44 lg:top-64 top-24">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
 
 
-                    <div class=" lg:-mt-10  md:-mt-4  ">
+                    <div class="hidden md:block lg:-mt-10  md:-mt-4  ">
                         <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
 
                             <div class="card rounded-none bg-base-100 ">
@@ -141,13 +141,13 @@
                         </div>
                     </div>
                     <div
-                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        class="absolute flex justify-between  transform -translate-y-1/2 left-5 right-5 md:top-44 lg:top-64 top-24">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
 
 
-                    <div class=" lg:-mt-10  md:-mt-4  ">
+                    <div class="hidden md:block lg:-mt-10  md:-mt-4  ">
                         <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
 
                             <div class="card rounded-none bg-base-100 ">
@@ -186,13 +186,13 @@
                         </div>
                     </div>
                     <div
-                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        class="absolute flex justify-between  transform -translate-y-1/2 left-5 right-5 md:top-44 lg:top-64 top-24">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide4" class="btn btn-circle">❯</a>
                     </div>
 
 
-                    <div class=" lg:-mt-10  md:-mt-4  ">
+                    <div class="hidden md:block lg:-mt-10  md:-mt-4  ">
                         <div class="grid  md:grid-cols-5 justify-center px-24 rounded-2xl ">
 
                             <div class="card rounded-none bg-base-100 ">
@@ -231,13 +231,13 @@
                         </div>
                     </div>
                     <div
-                        class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-2/4 md:top-1/2">
+                        class="absolute flex justify-between  transform -translate-y-1/2 left-5 right-5 md:top-44 lg:top-64 top-24">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
                     </div>
 
 
-                    <div class=" lg:-mt-10  md:-mt-4   ">
+                    <div class="hidden md:block lg:-mt-10  md:-mt-4   ">
                         <div class="grid md:grid-cols-5 justify-center px-24 rounded-2xl ">
 
                             <div class="card rounded-none bg-base-100  ">
