All section responsive done

--- a/index.html
+++ b/index.html
@@ -582,103 +582,106 @@
         <p class="w-3/5 mx-auto py-3">Contrary to popular belief, is not simply random text. It has roots in a piece of
             classical Latin literature from 45 BC, making it over 2000 years old.</p>
         <div class="grid md:grid-cols-2-center lg:grid-cols-3 md;gap-5 gap-y-6 gap-x-6 px-5 md:px-0 mt-10">
-            <!-- left column -->
-            <div class="grid  md:grid-col-3 gap-4">
-                <!-- first description -->
-                <div class="flex justify-start items-start">
+     <!-- left column -->
+     <div class="grid  md:grid-col-3 gap-y-5 md:gap-y-8 lg:gap-4">
+        <!-- first description -->
+        <div class="flex justify-start items-start">
 
-                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
-                        <div>
-                            <i
-                                class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
-                        </div>
-                        <div class="card-body p-0 gap-3">
-                            <h2 class="card-title text-2xl font-bold ">Dedicated Team</h2>
-                            <hr class=" w-3/5 border border-1 border-black">
-                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-
-                        </div>
-                    </div>
+            <div class="card card-side bg-base-100 flex items-start gap-5  flex-col md:flex-col lg:flex-row lg:pl-10 md:mx-auto">
+                <div class="w-full mx-auto flex  justify-center md:w-0 pr-7" >
+                    <i
+                        class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
                 </div>
-                <!-- second description -->
-                <div class="flex justify-start items-start">
+                <div class="card-body p-0 ">
+                    <h2 class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">Integrated Supplier</h2>
+                    <hr class="w-3/5 border border-1 mt-2 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx">
+                    <p class="text-center md:text-center lg:text-left block">Professional employees are there for you to pick the most amazing and
+                        fresh fruits.</p>
 
-                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
-                        <div>
-                            <i
-                                class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
-                        </div>
-                        <div class="card-body p-0 gap-3">
-                            <h2 class="card-title text-2xl font-bold ">Fresh is Best</h2>
-                            <hr class=" w-3/5 border border-1 border-black">
-                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <!-- third description -->
-                <div class="flex justify-start items-start">
-
-                    <div class="card card-side bg-base-100 flex items-start gap-5 ">
-                        <div>
-                            
-                                <i class="fa-solid fa-stamp text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
-                        </div>
-                        <div class="card-body p-0 gap-3">
-                            <h2 class="card-title text-2xl font-bold ">Gift Certificates</h2>
-                            <hr class=" w-3/5 border border-1 border-black">
-                            <p class="text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-
-                        </div>
-                    </div>
                 </div>
             </div>
-            <!-- left column end -->
-            <!-- MIddle column start-->
-            <div>
-                <img src="./images/whychoose1.png" alt="">
-            </div>
-            <!-- middle column ends -->
-            <!-- Right column start -->
-            <div class="grid  md:grid-col-3 gap-3">
-                <!-- first description -->
-                <div class="flex justify-end gap-5">
-                    <div class="text-right">
-                        <h2 class="text-2xl font-bold">Dedicated Team</h2>
-                        <hr class=" w-2/5 border border-1 mt-2 ml-[190px] border-black mx">
-                        <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                    </div>
-                    <div >
-                        <img class="w-[120px] bg-gray-200 rounded-full p-2" src="./images/fruit6.png" alt="">
-                    </div>
-                </div>
-                <!-- second description -->
-                <div class="flex justify-end gap-5">
-                    <div class="text-right">
-                        <h2 class="text-2xl font-bold">Gift Certificates</h2>
-                        <hr class=" w-2/5 border border-1 mt-2 ml-[190px] border-black mx">
-                        <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                    </div>
-                    <div >
-                        <img class="w-[120px] bg-gray-200 rounded-full p-2" src="./images/fruit8.png" alt="">
-                    </div>
-                </div>
-              <!-- third description -->
-                <div class="flex   md:justify-end gap-5">
-                    <div class="text-right ">
-                        <h2 class="text-2xl font-bold ">Fresh is Best</h2>
-                        <hr class=" w-2/5  border border-1 mt-2  ml-[190px] border-black mx">
-                        <p class="py-2 ">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                    </div>
-                    <div >
-                        <img class="w-[120px] mx-auto bg-gray-200 rounded-full p-2" src="./images/fruit7.png" alt="">
-                    </div>
-                </div>
-            <!-- right column ends -->
-
-
         </div>
-            <!-- right column ends -->
+        <!-- second description -->
+        <div class="flex justify-start items-start">
+
+            <div class="card card-side bg-base-100 flex items-start gap-5  flex-col md:flex-col lg:flex-row lg:pl-10 md:mx-auto  ">
+                <div class="w-full mx-auto flex  justify-center md:w-0 pr-7" >
+                    <i
+                        class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                </div>
+                <div class="card-body p-0 ">
+                    <h2 class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">Sustainable Practice</h2>
+                    <hr class=" w-3/5 border border-1 mt-1 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx">
+                    <p class="text-center md:text-center lg:text-left block">Professional employees are there for you to pick the most amazing and
+                        fresh fruits.</p>
+
+                </div>
+            </div>
+        </div>
+        <!-- third description -->
+        <div class="flex justify-start items-start ">
+
+            <div class="card card-side bg-base-100 flex items-start gap-5  flex-col md:flex-col lg:flex-row lg:pl-10 md:mx-auto ">
+                <div class=" w-full mx-auto flex  justify-center md:w-0 pr-7">
+                    <i
+                        class="fa-solid fa-stamp text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full  "></i>
+                </div>
+                <div class="card-body p-0  ">
+                    <h2 class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">The Benefits Only</h2>
+                    <hr class=" w-3/5   border border-1 mt-1 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx"">
+                    <p class="text-center md:text-center lg:text-left block">Professional employees are there for you to pick the most amazing and
+                        fresh fruits.</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- left column end -->
+    <!-- MIddle column start-->
+    <div class="flex md:justify-center ">
+        <img class="object-cover" src="./images/whychoose1.png" alt="">
+    </div>
+    <!-- middle column ends -->
+
+    <!-- Right column start -->
+    <div class="grid grid-cols-1  md:grid-col-3 gap-3 gap-y-5">
+        <!-- first description -->
+        <div class=" flex-col md:flex lg:flex-row justify-end gap-5">
+            <div class="text-center md:text-center lg:text-right">
+                <h2 class="text-2xl font-bold">Integrated Supplier</h2>
+                <hr class=" w-2/5  border border-1 mt-2 ml-[120px] md:ml-[220px] lg:ml-[150px] border-black mx">
+                <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            <div>
+                <img class=" w-[70px] md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto" src="./images/fruit6.png" alt="">
+            </div>
+        </div>
+        <!-- second description -->
+        <div class=" flex-col md:flex lg:flex-row justify-end gap-5">
+            <div class="text-center md:text-center lg:text-right">
+                <h2 class="text-2xl font-bold">Sustainable Practice</h2>
+                <hr class=" w-2/5  border border-1 mt-2 ml-[120px] md:ml-[220px] lg:ml-[150px] border-black mx">
+                <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            <div>
+                <img class=" w-[70px] md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto" src="./images/fruit8.png" alt="">
+            </div>
+        </div>
+      <!-- third description -->
+      <div class=" flex-col md:flex lg:flex-row justify-end gap-5">
+        <div class="text-center md:text-center lg:text-right">
+            <h2 class="text-2xl font-bold">The Benefits Only</h2>
+            <hr class=" w-2/5  border border-1 mt-2 ml-[120px] md:ml-[220px] lg:ml-[150px] border-black mx">
+            <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+        </div>
+        <div>
+            <img class=" w-[70px] md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto" src="./images/fruit7.png" alt="">
+        </div>
+    </div>
+    <!-- right column ends -->
+
+
+</div>
 
 
         </div>
