--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                                         <div class="card-body items-center text-center md:space-y-3">
                                             <h2 class="card-title text-[26px] md:text-[32px] -mt-7 -pt-7">Orange</h2>
                                             <p class="text-[16px]">Professional employees are there for you to pick the
-                                                most amazing and fresh fruits.</p>
+                                                most amang and fresh fruits.</p>
                                             <div class="card-actions p-0">
                                                 <div class="rating rating-md">
                                                     <input type="radio" name="rating-7"
@@ -898,6 +898,7 @@
 
 
 </body>
+
 
 
 </html>
